metadata work now? and fixed Microsoft logo on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -420,6 +420,7 @@ h4{
 #microsoft {
 	height: auto;
 	width: 350px;
+	margin: 0 auto;
 }
 
 #iCIMS{
